cncProd/force-app/main/default/objects/Action_Panel__mdt/Action_Panel__mdt.object-meta.xml
<CustomObject>
    <label>Action Panel</label>
    <pluralLabel>Action Panels</pluralLabel>
</CustomObject>