cncProd/force-app/main/default/objects/Action_Panel__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>navFlow</fullName>
                <default>true</default>
                <label>navFlow</label>
            </value>
            <value>
                <fullName>navExternalURL</fullName>
            </value>
            <value>
                <fullName>navVFP</fullName>
            </value>
            <value>
                <fullName>navLightningApp</fullName>
            </value>
            <value>
                <fullName>navListView</fullName>
            </value>
            <value>
                <fullName>navCreation</fullName>
            </value>
            <value>
                <fullName>navHome</fullName>
            </value>
            <value>
                <fullName>navTab</fullName>
            </value>
            <value>
                <fullName>navLightningPage</fullName>
            </value>
            <value>
                <fullName>navLightningCmp</fullName>
            </value>
            <value>
                <fullName>Bridge to Standard</fullName>
                <isActive>false</isActive>
                <label>Bridge to Standard</label>
            </value>
            <value>
                <fullName>Bridge to Visualforce Page</fullName>
                <isActive>false</isActive>
                <label>Bridge to Visualforce Page</label>
            </value>
            <value>
                <fullName>Report Page</fullName>
                <isActive>false</isActive>
                <label>Report Page</label>
            </value>
            <value>
                <fullName>navStandardCreation</fullName>
                <isActive>false</isActive>
                <label>navStandardCreation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>