cncProd/force-app/main/default/objects/Action_Panel__mdt/fields/Label_UI__c.field-meta.xml
<CustomField>
    <fullName>Label_UI__c</fullName>
    <label>Label UI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>