cncProd/force-app/main/default/objects/Action_Panel__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Zuora__CustomerAccount__c</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Zuora__Subscription__c</fullName>
            </value>
            <value>
                <fullName>Gift_Letter_Batch__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>